# FrameTech

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
FrameTech/: main.cpp
FrameTech.xcodeproj/: project.pbxproj
FrameTech.xcodeproj/xcuserdata/antonin.xcuserdatad/xcschemes/: xcschememanagement.plist
game_example/: game.toml
shaders/: basic_triangle.frag  basic_triangle.frag.spv  basic_triangle.vert  compile_shaders.bat  transformation_triangle.vert
src/: application.cpp  application.hpp  debug_tools.h  main.cpp  project.hpp  result.h  version.h
src/engine/: CMakeLists.txt  allocator.cpp  device.cpp  device.hpp  engine.cpp  engine.hpp  inputs.cpp  inputs.hpp  pipeline.cpp  pipeline.hpp  platform.hpp  project.hpp  shaders.h
src/engine/graphics/: allocator.hpp  command.cpp  command.hpp  commandbuffer.cpp  commandbuffer.hpp  common.hpp  definitions.hpp  device.cpp  device.hpp  memory.hpp  mesh.hpp  monitor.cpp  monitor.hpp  pipeline.cpp  pipeline.hpp  render.cpp  render.hpp  shaders.h  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp  ubo.cpp  ubo.hpp
src/engine/inputs/: inputs.cpp  inputs.hpp
src/engine/objects/: camera.cpp  camera.hpp  movable.hpp  world.cpp  world.hpp
src/ftstd/: CMakeLists.txt  arg_parse.h  chrono.h  debug_tools.h  mutex.hpp  profile_tools.h  result.h  result.hpp  shaders.h  timer.h  version.h
src/gameframework/: CMakeLists.txt  camera.cpp  camera.hpp  movable.hpp  taggable.hpp  world.cpp  world.hpp
